[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entities_common"
version = "0.1.10"
description = "Common shared custom packages"
readme = "README.md"
authors = [
  { name = "Francis N.", email = "francis.neequaye@projectdavid.co.uk" }
]
license = { text = "MIT" }
keywords = ["shared", "internal", "utilities", "schemas"]
requires-python = ">=3.8"

dependencies = [
  "pydantic",
  "typing_extensions"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "fastapi"
]


[project.urls]
Homepage = "https://github.com/frankie336/entities_common"

[project.scripts]
entities_common-api = "entities_common.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["entities_common", "entities_common.*"]

[tool.setuptools.dynamic]
version = { attr = "entities_common.__version__.__version__" }

[tool.black]
line-length = 100
target-version = ["py38"]
skip-string-normalization = true

[tool.flake8]
max-line-length = 200
extend-ignore = ["E203"]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]
